# polymarket

./: .dockerignore  .gitignore  AUDIT.md  PRD.md  README.md  pyproject.toml  test_paper_balance.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: .env.example  strategies.yaml  wallets.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: setup_account.py
src/: __init__.py  main.py
src/ai/: __init__.py
src/core/: __init__.py  client.py  config.py  db.py  rate_limiter.py  wallet.py  websocket.py
src/execution/: __init__.py  order_manager.py  position_manager.py  risk_manager.py
src/monitoring/: __init__.py  health.py  health_server.py  logger.py  pnl.py
src/notifications/: __init__.py  telegram.py
src/strategies/: __init__.py  arb_scanner.py  base.py  copy_trader.py  stink_bidder.py
tests/: conftest.py
tests/unit/: test_arb_scanner.py  test_config.py  test_copy_trader.py  test_db.py  test_deployment.py  test_monitoring.py  test_order_manager.py  test_rate_limiter.py  test_risk_manager.py  test_stink_bidder.py  test_telegram.py
