[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Profit-first automated trading bot for Polymarket"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Polymarket SDKs
    "py-clob-client>=0.34.0",
    "py-order-utils>=0.3.0",
    # Blockchain (7.x required for hexbytes compat with py-clob-client)
    "web3>=7.0",
    # HTTP and WebSocket
    "httpx>=0.27.0",
    "websockets>=12.0",
    # Data and config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # Database
    # Note: aiosqlite reserved for future async DB migration
    "aiosqlite>=0.20.0",
    # Logging and resilience
    "structlog>=24.0",
    # Notifications
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
polybot = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
environments = ["sys_platform != 'win32'"]
